--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "firebase": "^5.7.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ngx-toastr": "^9.1.1",
     "popper.js": "^1.14.6",
